--- a/MovilParaiso/app/src/main/res/values/colors.xml
+++ b/MovilParaiso/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="azul">#155d8b</color>
+    <color name="amarillo">#ffe130</color>
+    <color name="gris">#CCD1D3</color>
 </resources>
