Set main to open login activity

--- a/MovilParaiso/app/src/main/res/layout/activity_main.xml
+++ b/MovilParaiso/app/src/main/res/layout/activity_main.xml
@@ -34,7 +34,8 @@
                 android:layout_centerHorizontal="true"
                 android:layout_below="@id/txtMuni"
                 android:layout_marginTop="20sp"
-                android:background="@color/gris"/>
+                android:background="@color/gris"
+                android:contentDescription="@string/escudo"/>
 
             <Button
                 android:id="@+id/btnLogin"
