--- a/MovilParaiso/app/src/main/res/layout/activity_login.xml
+++ b/MovilParaiso/app/src/main/res/layout/activity_login.xml
@@ -8,7 +8,16 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@android:color/white">
+
+        <ImageView
+            android:id="@+id/backbtn"
+            android:layout_width="37dp"
+            android:layout_height="wrap_content"
+            android:src="@drawable/back"
+            android:adjustViewBounds="true"
+            android:layout_margin="15dp"/>
 
         <RelativeLayout
             android:layout_width="wrap_content"
