--- a/MovilParaiso/app/src/main/res/values/colors.xml
+++ b/MovilParaiso/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#FFFFFF</color>
+    <color name="colorPrimaryDark">#155d8b</color>
+    <color name="colorAccent">#ffe130</color>
     <color name="azul">#155d8b</color>
     <color name="amarillo">#ffe130</color>
     <color name="gris">#CCD1D3</color>
