Added layout to list atractivos

--- a/MovilParaiso/app/src/main/res/values/colors.xml
+++ b/MovilParaiso/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="azul">#155d8b</color>
     <color name="amarillo">#ffe130</color>
     <color name="gris">#CCD1D3</color>
+    <color name="rojo">#9E2A3A</color>
 </resources>
