--- a/MovilParaiso/app/src/main/res/layout/activity_list_atractivos.xml
+++ b/MovilParaiso/app/src/main/res/layout/activity_list_atractivos.xml
@@ -6,4 +6,85 @@
     android:layout_height="match_parent"
     tools:context=".ListAtractivos">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <include layout="@layout/titlebar"/>
+
+        <ImageView
+            android:id="@+id/backbtn"
+            android:layout_width="37dp"
+            android:layout_height="wrap_content"
+            android:src="@drawable/back"
+            android:paddingTop="150dp"
+            android:layout_margin="10dp"
+            android:adjustViewBounds="true"/>
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:paddingTop="200dp">
+
+            <TextView
+                android:id="@+id/atractivo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/atract"
+                android:layout_marginStart="40sp"
+                android:textAllCaps="true"
+                android:textColor="@color/azul"/>
+
+            <TextView
+                android:id="@+id/distrito"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/dist"
+                android:layout_alignEnd="@id/lista"
+                android:textColor="@color/azul"
+                android:textAllCaps="true"
+                android:layout_marginEnd="40sp"/>
+
+            <ListView
+                android:id="@+id/lista"
+                android:layout_width="match_parent"
+                android:layout_height="350dp"
+                android:layout_marginEnd="20sp"
+                android:layout_marginStart="20sp"
+                android:layout_marginTop="30dp"
+                android:layout_marginBottom="20sp"/>
+
+            <Button
+                android:id="@+id/newatract"
+                android:layout_width="115sp"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/lista"
+                android:layout_alignStart="@id/lista"
+                android:layout_marginStart="50sp"
+                android:layout_marginTop="10sp"
+                android:text="@string/addatract"
+                android:textColor="@android:color/white"
+                android:background="@color/azul"
+                android:textSize="18sp"
+                android:typeface="sans"/>
+
+            <Button
+                android:id="@+id/delete"
+                android:layout_width="115sp"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/lista"
+                android:layout_alignEnd="@id/lista"
+                android:layout_marginEnd="50sp"
+                android:layout_marginTop="10sp"
+                android:text="@string/deleteatract"
+                android:textColor="@android:color/white"
+                android:typeface="sans"
+                android:textSize="18sp"
+                android:background="@color/rojo"/>
+
+        </RelativeLayout>
+
+    </RelativeLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
