--- a/MovilParaiso/app/src/main/res/layout/activity_login.xml
+++ b/MovilParaiso/app/src/main/res/layout/activity_login.xml
@@ -13,11 +13,17 @@
 
         <ImageView
             android:id="@+id/backbtn"
-            android:layout_width="37dp"
+            android:layout_width="34dp"
             android:layout_height="wrap_content"
-            android:src="@drawable/back"
+            android:layout_marginStart="15dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginBottom="15dp"
             android:adjustViewBounds="true"
-            android:layout_margin="15dp"/>
+            android:src="@drawable/back"
+            android:contentDescription="TODO" />
 
         <RelativeLayout
             android:layout_width="wrap_content"
@@ -28,11 +34,13 @@
                 android:id="@+id/username"
                 android:layout_width="290sp"
                 android:layout_height="wrap_content"
+                android:autofillHints=""
+                android:background="@drawable/edittextbackground"
                 android:drawableStart="@drawable/userico"
                 android:drawablePadding="10sp"
-                android:textSize="26sp"
                 android:hint="@string/user"
-                android:background="@drawable/edittextbackground"/>
+                android:inputType="text"
+                android:textSize="26sp" />
 
             <EditText
                 android:id="@+id/password"
@@ -44,7 +52,8 @@
                 android:drawableStart="@drawable/lock"
                 android:drawablePadding="10sp"
                 android:hint="@string/pass"
-                android:background="@drawable/edittextbackground"/>
+                android:background="@drawable/edittextbackground"
+                android:autofillHints="" />
 
             <Button
                 android:id="@+id/btn_login"
@@ -58,17 +67,6 @@
                 android:text="@string/login"
                 android:textSize="26sp"
                 android:textColor="@color/azul"/>
-
-            <TextView
-                android:id="@+id/olvido"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/btn_login"
-                android:layout_centerHorizontal="true"
-                android:textColor="@color/azul"
-                android:textSize="20sp"
-                android:text="@string/olvido"
-                android:layout_marginTop="10sp"/>
 
         </RelativeLayout>
 
