--- a/MovilParaiso/app/src/main/res/layout/titlebar.xml
+++ b/MovilParaiso/app/src/main/res/layout/titlebar.xml
@@ -6,7 +6,8 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
         android:src="@drawable/fondo"
-        android:adjustViewBounds="true"/>
+        android:contentDescription="@string/todo" />
 
 </RelativeLayout>
